--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,14 @@
-<h1>Corona Deaths per day</h1>
+<div class="content">
+  <h1>Corona Deaths per day</h1>
 
-<div *ngIf="!data">Loading...</div>
-<div *ngIf="data">
-  <div style="width: 90%; height: 400px; margin-left: auto; margin-right: auto;">
-    <h2>Global deaths per day</h2>
-  <!-- Based on: https://stackblitz.com/edit/swimlane-line-chart?embed=1&file=app/app.component.ts -->
-  <ngx-charts-area-chart-stacked
-    [legend]="legend"
-    [animations]="animations"
-    [showXAxisLabel]="showXAxisLabel"
-    [showYAxisLabel]="showYAxisLabel"
-    [xAxis]="xAxis"
-    [yAxis]="yAxis"
-    [xAxisLabel]="xAxisLabel"
-    [yAxisLabel]="yAxisLabel"
-    [timeline]="timeline"
-    [results]="graphData"
-  >
-  </ngx-charts-area-chart-stacked>
-  </div>
-
-  <div style="width: 90%; height: 400px; margin-left: auto; margin-right: auto;">
-    <h2>Deaths per day in different countries</h2>
-    <ng-select [multiple]="true" [items]="countries" bindLabel="label" [(ngModel)]="selectedCountries" (ngModelChange)="updatePerCountryGraphData()"></ng-select>
-    <ngx-charts-line-chart
-      [legend]="true"
+  <div *ngIf="!data">Loading...</div>
+  <div *ngIf="data">
+    <mat-slide-toggle [(ngModel)]="smoothing" (ngModelChange)="updatePerCountryGraphData(); updateGlobalData();">Smoothing</mat-slide-toggle>
+    <div class="graph">
+      <h2>Global deaths per day</h2>
+    <!-- Based on: https://stackblitz.com/edit/swimlane-line-chart?embed=1&file=app/app.component.ts -->
+    <ngx-charts-area-chart-stacked
+      [legend]="legend"
       [animations]="animations"
       [showXAxisLabel]="showXAxisLabel"
       [showYAxisLabel]="showYAxisLabel"
@@ -33,8 +17,27 @@
       [xAxisLabel]="xAxisLabel"
       [yAxisLabel]="yAxisLabel"
       [timeline]="timeline"
-      [results]="perCountryGraphData"
+      [results]="graphData"
     >
-    </ngx-charts-line-chart>
+    </ngx-charts-area-chart-stacked>
+    </div>
+
+    <div class="graph">
+      <h2>Deaths per day in different countries</h2>
+      <ng-select [multiple]="true" [items]="countries" bindLabel="label" [(ngModel)]="selectedCountries" (ngModelChange)="updatePerCountryGraphData()"></ng-select>
+      <ngx-charts-line-chart
+        [legend]="true"
+        [animations]="animations"
+        [showXAxisLabel]="showXAxisLabel"
+        [showYAxisLabel]="showYAxisLabel"
+        [xAxis]="xAxis"
+        [yAxis]="yAxis"
+        [xAxisLabel]="xAxisLabel"
+        [yAxisLabel]="yAxisLabel"
+        [timeline]="timeline"
+        [results]="perCountryGraphData"
+      >
+      </ngx-charts-line-chart>
+    </div>
   </div>
 </div>
