--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <div class="content">
   <h1>Corona Deaths per day</h1>
-  <mat-slide-toggle [(ngModel)]="smoothing" (ngModelChange)="updatePerCountryGraphData(); updateGlobalData();">Smoothing</mat-slide-toggle>
+  <mat-slide-toggle [(ngModel)]="smoothing" (ngModelChange)="updateGraphData();">Smoothing</mat-slide-toggle>
+  &nbsp;&nbsp;&nbsp;
+  <mat-slide-toggle [(ngModel)]="logY" (ngModelChange)="updateGraphData();">Log scale</mat-slide-toggle>
+
 
   <div *ngIf="!dates">Loading...</div>
   <div *ngIf="dates">
@@ -49,13 +52,15 @@
     <div>
       <h2>Estimated infected, based on the number of deaths</h2>
       <p>Based on <a href="https://medium.com/@tomaspueyo/coronavirus-act-today-or-people-will-die-f4d3d9cd99ca" target="_blank">a post by Tomas Pueyo on Medium</a></p>
-      <ng-select [multiple]="false" [items]="countries" bindLabel="label" [(ngModel)]="selectedEstimateCountry" (ngModelChange)="updateEstimatedInfectedData()"></ng-select>
-      <p><mat-slider style="width: 60%" [min]="0" [max]="20" [step]="0.5" [thumbLabel]="true" [(ngModel)]="estimateDeathRate" (ngModelChange)="updateEstimatedInfectedData()"></mat-slider>Estimated death rate: {{estimateDeathRate}}%</p>
+      <ng-select style="max-width: 20em" [multiple]="false" [items]="countries" bindLabel="label" [(ngModel)]="selectedEstimateCountry" (ngModelChange)="updateEstimatedInfectedData()"></ng-select>
+      <p><mat-slider style="width: 60%" [min]="0" [max]="25" [step]="0.5" [thumbLabel]="true" [(ngModel)]="estimateDeathRate" (ngModelChange)="updateEstimatedInfectedData()"></mat-slider>Estimated death rate: {{estimateDeathRate}}%</p>
       <p><mat-slider style="width: 60%" [min]="1" [max]="30" [step]="1" [thumbLabel]="true" [(ngModel)]="estimateTimeTillDeath" (ngModelChange)="updateEstimatedInfectedData()"></mat-slider>Estimated days between initial infection and death: {{estimateTimeTillDeath}} days</p>
 
-      <p><mat-slider style="width: 60%" [min]="0" [max]="1" [step]="0.02" [thumbLabel]="true" [(ngModel)]="kalmanR" (ngModelChange)="updateEstimatedInfectedData()"></mat-slider>Kalman R</p>
-      <p><mat-slider style="width: 60%" [min]="0" [max]="50" [step]="0.5" [thumbLabel]="true" [(ngModel)]="kalmanQ" (ngModelChange)="updateEstimatedInfectedData()"></mat-slider>Kalman Q</p>
-      <p><mat-slider style="width: 60%" [min]="1" [max]="4" [step]="0.05" [thumbLabel]="true" [(ngModel)]="kalmanA" (ngModelChange)="updateEstimatedInfectedData()"></mat-slider>Kalman A</p>
+      <p><mat-slider style="width: 25%" [min]="0" [max]="1" [step]="0.02" [thumbLabel]="true" [(ngModel)]="kalmanR" (ngModelChange)="updateEstimatedInfectedData()"></mat-slider>Kalman R
+      <mat-slider style="width: 25%" [min]="0" [max]="50" [step]="0.5" [thumbLabel]="true" [(ngModel)]="kalmanQ" (ngModelChange)="updateEstimatedInfectedData()"></mat-slider>Kalman Q
+      <mat-slider style="width: 25%" [min]="1" [max]="4" [step]="0.05" [thumbLabel]="true" [(ngModel)]="kalmanA" (ngModelChange)="updateEstimatedInfectedData()"></mat-slider>Kalman A</p>
+
+      <h3>There are an estimated {{selectedCountryTotalInfectedEstimate | number}} cases in {{selectedEstimateCountry.label}}. The reported number of cases is {{selectedCountryReportedTotalInfected | number}}</h3>
 
 
       <div class="graph">
