--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,7 +60,7 @@
       <mat-slider style="width: 25%" [min]="0" [max]="50" [step]="0.5" [thumbLabel]="true" [(ngModel)]="kalmanQ" (ngModelChange)="updateEstimatedInfectedData()"></mat-slider>Kalman Q
       <mat-slider style="width: 25%" [min]="1" [max]="4" [step]="0.05" [thumbLabel]="true" [(ngModel)]="kalmanA" (ngModelChange)="updateEstimatedInfectedData()"></mat-slider>Kalman A</p>
 
-      <h3>There are an estimated {{selectedCountryTotalInfectedEstimate | number}} cases in {{selectedEstimateCountry.label}}. The reported number of cases is {{selectedCountryReportedTotalInfected | number}}</h3>
+      <h3 *ngIf="selectedEstimateCountry">There are an estimated {{selectedCountryTotalInfectedEstimate | number}} cases in {{selectedEstimateCountry.label}}. The reported number of cases is {{selectedCountryReportedTotalInfected | number}}</h3>
 
 
       <div class="graph">
